Fix attempt for mobile layout not fitting iphone

--- a/style.css
+++ b/style.css
@@ -140,15 +140,8 @@ table {
     src: url(./font/Inter-VariableFont_slnt\,wght.ttf);
 }
 
-html,
-body {
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
 body {
     font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: relative;
 }
 
 :root {
@@ -168,6 +161,7 @@ section {
     transition: 1s;
     position: relative;
     min-height: 100vh;
+    max-height: 100vh;
     background-color: var(--color-background-primary);
     display: flex;
     justify-content: center;
@@ -306,7 +300,7 @@ a:visited {
 
 /* _________________________________RESPONSIVE_______________________________ */
 
-.section.active {
+section.active {
     transition: 1s;
     position: relative;
     min-height: 100vh;
@@ -451,11 +445,34 @@ input:focus {
         text-shadow: 1px 1px 10px #3b3b3b;
     }
 
+    html,
+    body {
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
+
+    body {
+        position: relative;
+    }
+
     section {
         display: flex;
         flex-direction: column;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        background-image: url(./img/background1.jpg);
+        background-position: center;
+        background-size: cover;
+        padding: 0px 20px;
+    }
+
+    section.active {
+        background-image: url(./img/background2.jpg);
+        background-position: center;
+        background-size: cover;
+        padding: 0px 20px;
+    }
+
+    section .container {
+        position: absolute;
     }
 
     section .logo_responsive {
@@ -464,6 +481,7 @@ input:focus {
         align-items: center;
         height: 70px;
         width: auto;
+        margin-bottom: auto;
     }
 
     section .logo_responsive img {
@@ -507,17 +525,5 @@ input:focus {
         width: 100%;
         background: #e4dada7c;
         top: 0%;
-    }
-
-    section {
-        background-image: url(./img/background1.jpg);
-        background-position: center;
-        background-size: cover;
-    }
-
-    section.active {
-        background-image: url(./img/background2.jpg);
-        background-position: center;
-        background-size: cover;
     }
 }
